<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/user_name_preference"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/user_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/password_preference"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/testConnectFTP_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/preferenceTestConnect" />

            <Button
                android:id="@+id/savePreference_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
        
        <LinearLayout       
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/sendOutlet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/sendOutlet"
                android:visibility="invisible" />

            <Button
                android:id="@+id/getOutlet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/getOutlet" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/visit_preference_progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>
