<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="1dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_outlet_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/visit_outlet_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="10"
                    android:text="@string/visit_outlet_hint" />

                <Button
                    android:id="@+id/buttonSelectOutlet"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/selected_button" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_date_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/visit_date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/visit_outlet_hint" />

            <requestFocus />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sendFTP_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/send_button" />

        <Button
            android:id="@+id/saveVisit_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/save" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/visit_imageView1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:cropToPadding="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_launcher" />

                    <FrameLayout
                        android:layout_width ="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:id="@+id/checkBoxTransferred1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/send" />

                        <ImageButton
                            android:id="@+id/visit_ImageButton1"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_menu_camera" />

                    </FrameLayout>

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/progressImage1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" >

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/FrameLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                <ImageView
                    android:id="@+id/visit_imageView2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:cropToPadding="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher" />

                 <FrameLayout
                        android:layout_width ="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:id="@+id/checkBoxTransferred2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/send" />

                        <ImageButton
                    		android:id="@+id/visit_ImageButton2"
                    		android:layout_width="80dp"
                    		android:layout_height="wrap_content"
                    		android:src="@android:drawable/ic_menu_camera" />

                    </FrameLayout>

                
            </LinearLayout>
            <FrameLayout
                    android:id="@+id/progressImage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" >

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </FrameLayout>
            </FrameLayout>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="149dp" >

            <FrameLayout
                android:id="@+id/FrameLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                <ImageView
                    android:id="@+id/visit_imageView3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:cropToPadding="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher" />

                
                
                <FrameLayout
                        android:layout_width ="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:id="@+id/checkBoxTransferred3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/send" />

                         <ImageButton
                   			android:id="@+id/visit_ImageButton3"
                    		android:layout_width="80dp"
                    		android:layout_height="wrap_content"
                    		android:src="@android:drawable/ic_menu_camera" />

                    </FrameLayout>
               
            </LinearLayout>
            <FrameLayout
                    android:id="@+id/progressImage3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" >

                    <ProgressBar
                        android:id="@+id/progressBar3"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/FrameLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                <ImageView
                    android:id="@+id/visit_imageView4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:cropToPadding="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher" />

               
                 <FrameLayout
                        android:layout_width ="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:id="@+id/checkBoxTransferred4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/send" />

                        <ImageButton
                    		android:id="@+id/visit_ImageButton4"
                    		android:layout_width="80dp"
                    		android:layout_height="wrap_content"
                    		android:src="@android:drawable/ic_menu_camera" />
                    </FrameLayout>
                
            </LinearLayout>
            
                <FrameLayout
                    android:id="@+id/progressImage4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" >

                    <ProgressBar
                        android:id="@+id/progressBar4"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </FrameLayout>
            </FrameLayout>
        </TableRow>
    </TableLayout>

    
 
    
</LinearLayout>
